--- a/tests/worker/base-scenarios/base-tmt-container_pipeline.yaml
+++ b/tests/worker/base-scenarios/base-tmt-container_pipeline.yaml
@@ -9,11 +9,12 @@ pipeline: |
   hide-secrets
   rules-engine
   testing-farm-request --request-id {{ REQUEST_ID }}
+  coldstore
+  archive
   ansible
   static-guest --guest=localhost
   guest-setup-no-playbooks:guest-setup
   git
-  coldstore
   testing-farm-request-state-reporter
   test-schedule-tmt
   test-scheduler-testing-farm
