--- a/tests/worker/public/tmt-container-secrets.yaml
+++ b/tests/worker/public/tmt-container-secrets.yaml
@@ -21,7 +21,7 @@ checks:
     - "[worker_0] [stderr] [None:x86_64:/testing-farm/sanity]             00:00:00 pass /testing-farm/script (on default-0) [1/1]"
 
   literal-patterns[citool-debug.txt]:
-    - "[hide-secrets] Hiding secrets from all files under '.' path"
+    - "[hide-secrets] Hiding secrets from all files under './citool-debug.txt' path"
 
   literal-patterns:
     - |
