--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yaml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yaml
@@ -22,7 +22,7 @@
     rpm -ivh https://kojipkgs.fedoraproject.org//packages/koji/1.34.0/1.fc40/noarch/koji-1.34.0-1.fc40.noarch.rpm
              https://kojipkgs.fedoraproject.org//packages/koji/1.34.0/1.fc40/noarch/python3-koji-1.34.0-1.fc40.noarch.rpm
              https://kojipkgs.fedoraproject.org//packages/python-requests-gssapi/1.2.3/11.fc40/noarch/python3-requests-gssapi-1.2.3-11.fc40.noarch.rpm
-             https://kojipkgs.fedoraproject.org//packages/python-gssapi/1.7.3/8.fc40/x86_64/python3-gssapi-1.7.3-8.fc40.x86_64.rpm
+             https://kojipkgs.fedoraproject.org//packages/python-gssapi/1.7.3/8.fc40/{{ ansible_architecture }}/python3-gssapi-1.7.3-8.fc40.{{ ansible_architecture }}.rpm
              https://kojipkgs.fedoraproject.org//packages/python-decorator/5.1.1/9.fc40/noarch/python3-decorator-5.1.1-9.fc40.noarch.rpm
   when:
     - "IMAGE_NAME|lower|regex_search('centos.stream.10')"
