--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/workaround-centos-10.yaml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/workaround-centos-10.yaml
@@ -1,4 +1,7 @@
-- name: Add repositories on CentOS 10, mirrorlist not around yet
+---
+# Mirrorlists are not working - add repositories from ODCS
+# Add F40 repositories as a replacement for non-existing EPEL
+- name: Add repositories for CentOS 10 (workaround)
   block:
     - copy:
         src: "{{ playbook_dir }}/files/centos.repo"
@@ -13,6 +16,14 @@
         owner: root
         group: root
         mode: 0644
+
+    - copy:
+        src: "{{ playbook_dir }}/files/fedora.repo"
+        dest: /etc/yum.repos.d/fedora.repo
+        owner: root
+        group: root
+        mode: 0644
+
   when:
     - 'ansible_distribution == "CentOS"'
     - 'ansible_distribution_major_version == "10"'
