--- a/tests/worker/public/sti-x86_64.yaml
+++ b/tests/worker/public/sti-x86_64.yaml
@@ -1,31 +1,14 @@
 ---
 
+extends:
+  - base-sti_pipeline
+
 marks:
   - public
   - pipeline
 
 variables:
   REQUEST_ID: c6d64e54-e2e5-4e90-bde0-69e5a268bbd0
-
-pipeline: |
-  hide-secrets
-  rules-engine
-  testing-farm-request --request-id {{ REQUEST_ID }}
-  ansible
-  artemis
-  fedora-copr:copr
-  guest-setup-testing-farm:guest-setup
-  install-copr-build
-  install-koji-build-execute
-  install-repository
-  git
-  coldstore
-  testing-farm-request-state-reporter
-  test-scheduler-sti
-  test-schedule-runner-sti
-  test-scheduler-testing-farm
-  test-schedule-runner
-  test-schedule-report
 
 checks:
   literal-strings:
