--- a/tests/worker/redhat/pipeline/sti-x86_64.yaml
+++ b/tests/worker/redhat/pipeline/sti-x86_64.yaml
@@ -4,18 +4,19 @@ marks:
   - redhat
 
 pipeline: |
-  hide-secrets
   rules-engine
+  hide-secrets
   testing-farm-request --request-id f8b712c2-1baa-43b9-a5ab-b1668a31981e
+  coldstore
   ansible
   artemis
   fedora-copr:copr
-  guest-setup-testing-farm:guest-setup
+  install-repository
   install-copr-build
   install-koji-build-execute
-  install-repository
+  guest-setup-testing-farm:guest-setup
+  guest-setup-order
   git
-  coldstore
   testing-farm-request-state-reporter
   test-scheduler-sti
   test-schedule-runner-sti
