--- a/tests/worker/public/tmt-container-test-name.yaml
+++ b/tests/worker/public/tmt-container-test-name.yaml
@@ -26,6 +26,7 @@ checks:
        </properties>
        <testsuite name="{{ PLAN }}" result="passed" tests="1">
         <logs>
+         <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-test-filter{{ '.+' }}{{ PLAN }}/data" name="data"/>
          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-test-filter{{ '.+' }}/tmt-run.log" name="tmt-log"/>
          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-test-filter{{ '.+' }}/tmt-reproducer.sh" name="tmt-reproducer"/>
          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-test-filter{{ '.+' }}" name="workdir"/>
@@ -43,6 +44,7 @@ checks:
           <property name="baseosci.variant" value=""/>
          </properties>
          <logs>
+          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-test-filter{{ '.+' }}{{ PLAN }}/execute/data/guest/default-0/testing-farm/test-filter-script-1/data" name="data" schedule-entry="None:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
           <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-test-filter{{ '.+' }}{{ PLAN }}/execute/data/guest/default-0/testing-farm/test-filter-script-1" name="log_dir" schedule-entry="None:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
           <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-test-filter{{ '.+' }}{{ PLAN }}/execute/data/guest/default-0/testing-farm/test-filter-script-1/output.txt" name="testout.log" schedule-entry="None:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
          </logs>
