--- a/tests/worker/public/tmt-multihost-invalid-provision-how.yaml
+++ b/tests/worker/public/tmt-multihost-invalid-provision-how.yaml
@@ -29,6 +29,7 @@ checks:
        </properties>
        <testsuite name="{{ PLAN }}" result="error" tests="0">
         <logs>
+         <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-invalid-provision-how{{ '.+' }}{{ PLAN }}/data" name="data"/>
          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-invalid-provision-how{{ '.+' }}/tmt-run.log" name="tmt-log"/>
          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-invalid-provision-how{{ '.+' }}/tmt-reproducer.sh" name="tmt-reproducer"/>
          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-invalid-provision-how{{ '.+' }}" name="workdir"/>
