--- a/ansible/inventory/group_vars/testing_farm_redhat_workers.yml
+++ b/ansible/inventory/group_vars/testing_farm_redhat_workers.yml
@@ -42,6 +42,8 @@ artemis_ssh_public_key: "{{ ansible_dir }}/secrets/ssh/id_rsa_redhat_artemis.pub
 podman_authfile: "{{ ansible_dir }}/secrets/quay/testing-farm-tftbot-auth.json"
 
 # jobs
+job_request_timeout: 1440
+nomad_job_args: "[\"${NOMAD_META_REQUEST_ID}\", \"${NOMAD_ALLOC_DIR}\", \"12h\"]"
 jobs:
   - tf-tmt
   - tf-tmt-container
