tests: replace '*****' with 'hidden'

--- a/tests/worker/public/tmt-container-secrets.yaml
+++ b/tests/worker/public/tmt-container-secrets.yaml
@@ -31,7 +31,7 @@ checks:
               {
                   "arch": "{{ ARCH }}",
                   "artifacts": [],
-                  "secrets": "******",
+                  "secrets": "hidden",
                   "snapshots": false,
                   "variables": {
                       "SCRIPT": "test $SECRET = some-secret",
