dev: add EC2 server to host API, dispatcher, artifacts storage
Provisioned via Terragrunt.

Add EC2 server based on latest Fedora CoreOS to host our general
components.

Part of TFT-2438

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,14 @@ report.html
 # decrypted secrets
 **/*.decrypted
 
+# ignore Ignition files, we use Butane to generate them
+**/*.ign
+
+# python cache
+**/__pycache__
+
+# mypy cache
+**/.mypy_cache
+
 # ansible roles from galaxy
 ansible/roles/geerlingguy.swap
