--- a/tests/worker/public/tmt-container-checks.yaml
+++ b/tests/worker/public/tmt-container-checks.yaml
@@ -34,7 +34,7 @@ checks:
         <properties>
          <property name="baseosci.result" value="passed"/>
         </properties>
-        <testcase name="/testing-farm/script" result="passed" time="{{ '\d+' }}">
+        <testcase name="/testing-farm/script" result="passed" time="{{ '\d+' }}" start-time="{{ timestamp_pattern }}" end-time="{{ timestamp_pattern }}">
          <properties>
           <property name="baseosci.arch" value="{{ ARCH }}"/>
           <property name="baseosci.connectable_host" value="localhost"/>
@@ -86,7 +86,7 @@ checks:
       <?xml version="1.0" encoding="UTF-8"?>
       <testsuites>
        <testsuite name="{{ PLAN }}" tests="1" failures="0" errors="0" skipped="0">
-        <testcase name="/testing-farm/script" classname="tests" time="{{ '\d+' }}">
+        <testcase name="/testing-farm/script" classname="tests" time="{{ '\d+' }}" start-time="{{ timestamp_pattern }}" end-time="{{ timestamp_pattern }}">
          <system-out>NAME=&amp;quot;Fedora Linux&amp;quot;
       VERSION=&amp;quot;{{ '\d+' }} (Container Image)&amp;quot;
       ID=fedora
